Add possibility to authenticate with API Key.
See #1